Desktop Page Info/Mac: Dismiss internal page info bubble on tab switches.

Follow up to r475019, which dismisses the (non-internal) page info bubble when
using global browser hotkeys. This fixes the same issue, but for the internal
page info bubble.

Bug: 786361
Change-Id: If0a04f057e023871ff2b665d98941b836920625a